--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="card">
     <div class="row c4">
       <div><div class="muted">1 點攻擊 = 幾點屬性</div><input id="wAtk" type="number" step="0.01" value="1.00"></div>
-      <div><div class="muted">1 點生命 = 幾點屬性</</div><input id="wHp"  type="number" step="0.01" value="0.90"></div>
+      <div><div class="muted">1 點生命 = 幾點屬性</div><input id="wHp"  type="number" step="0.01" value="0.90"></div>
       <div><div class="muted">1 本金書 = 人民幣（元）</div><input id="price" type="number" step="0.01" value="1.76"></div>
       <div><div class="muted">資料來源</div><span id="dataSrc" class="pill">讀取中…</span></div>
     </div>
@@ -180,28 +180,19 @@ async function loadExcel(){
   groupItems(); renderAll();
 }
 
-function groupItems(){
-  const map = new Map();
-  for(const r of RAW){ if(!map.has(r.name)) map.set(r.name,{name:r.name,rarity:r.rarity,icon:r.icon,lv:5,checked:false,rows:[]}); map.get(r.name).rows.push(r); }
-  ITEMS = Array.from(map.values()).sort((a,b)=>a.name.localeCompare(b.name,'zh-Hant'));
-}
+function groupItems(){ const map = new Map(); for(const r of RAW){ if(!map.has(r.name)) map.set(r.name,{name:r.name,rarity:r.rarity,icon:r.icon,lv:5,checked:false,rows:[]}); map.get(r.name).rows.push(r); } ITEMS = Array.from(map.values()).sort((a,b)=>a.name.localeCompare(b.name,'zh-Hant')); }
 
 function stepInc(total12, fromLv){ if(!(fromLv>=5 && fromLv<=11)) return 0; const a = CUM_PCT[fromLv], b = CUM_PCT[fromLv+1]; return (b-a)*(Number(total12)||0); }
 function collectStepRows(item, fromLv){ const rows = []; for(const r of item.rows){ rows.push({base:r.base, kind:r.kind, troop:r.troop, inc:stepInc(r.total12, fromLv)}); } return rows; }
-function aggregate(rows, weights){ const troops = {步:{atk:0,hp:0}, 弓:{atk:0,hp:0}, 騎:{atk:0,hp:0}, 全軍:{atk:0,hp:0}}; const byTagTroop = { '狂熱':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '基礎白字':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '領主隨隊':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}} }; for(const r of rows){ const t = troops[r.troop] || troops.全軍; if(r.kind==='atk') t.atk += r.inc; if(r.kind==='hp') t.hp += r.inc; if(byTagTroop[r.base] && byTagTroop[r.base][r.troop]){ if(r.kind==='atk') byTagTroop[r.base][r.troop].atk += r.inc; if(r.kind==='hp') byTagTroop[r.base][r.troop].hp += r.inc; } } const atk = troops.步.atk + troops.弓.atk + troops.騎.atk + troops.全軍.atk; const hp  = troops.步.hp  + troops.弓.hp  + troops.騎.hp  + troops.全軍.hp; const eq  = atk*weights.atk + hp*weights.hp; return {troops,byTagTroop,atk,hp,eq}; }
+function aggregate(rows, weights){ const troops = {步:{atk:0,hp:0}, 弓:{atk:0,hp:0}, 騎:{atk:0,hp:0}, 全軍:{atk:0,hp:0}}; const byTagTroop = { '狂熱':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '基礎白字':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '領主隨隊':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}} }; for(const r of rows){ const t = troops[r.troop] || troops.全軍; if(r.kind==='atk') t.atk += r.inc; if(r.kind==='hp')  t.hp  += r.inc; if(byTagTroop[r.base] && byTagTroop[r.base][r.troop]){ if(r.kind==='atk') byTagTroop[r.base][r.troop].atk += r.inc; if(r.kind==='hp')  byTagTroop[r.base][r.troop].hp  += r.inc; } } const atk = troops.步.atk + troops.弓.atk + troops.騎.atk + troops.全軍.atk; const hp  = troops.步.hp  + troops.弓.hp  + troops.騎.hp  + troops.全軍.hp; const eq  = atk*weights.atk + hp*weights.hp; return {troops,byTagTroop,atk,hp,eq}; }
 
-function calcAll(){
-  const weights = STATE.weights, price = STATE.price; let kAtk=0,kHp=0,kEq=0,kGold=0; const tagSum = { '狂熱':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '基礎白字':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '領主隨隊':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}} }; const troopSum = {步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0},全軍:{atk:0,hp:0}}; const listRows = [];
-  for(const it of ITEMS){ if(STATE.search && !it.name.includes(STATE.search)) continue; if(STATE.onlyChecked && !it.checked) continue; const curLv = Math.max(5, Math.min(12, Number(it.lv)||5)); let allRows = [], gold = 0; if (curLv <= 11) { for (let lv = curLv; lv <= 11; lv++) { allRows = allRows.concat(collectStepRows(it, lv)); gold += GOLD_BOOKS_FROM[lv] || 0; } } const agg = aggregate(allRows, weights); const cost = gold*price, unit = agg.eq>0? cost/agg.eq : Infinity; listRows.push({it, agg, gold, cost, unit}); if(it.checked){ kAtk+=agg.atk; kHp+=agg.hp; kEq+=agg.eq; kGold+=gold; for(const tag of Object.keys(tagSum)){ for(const t of ['步','弓','騎']){ tagSum[tag][t].atk += agg.byTagTroop[tag][t].atk; tagSum[tag][t].hp  += agg.byTagTroop[tag][t].hp; } } for(const t of Object.keys(troopSum)){ troopSum[t].atk += agg.troops[t].atk; troopSum[t].hp  += agg.troops[t].hp; } } }
-  return {listRows, kAtk,kHp,kEq,kGold, tagSum, troopSum}; }
+function calcAll(){ const weights = STATE.weights, price = STATE.price; let kAtk=0,kHp=0,kEq=0,kGold=0; const tagSum = { '狂熱':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '基礎白字':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}}, '領主隨隊':{步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0}} }; const troopSum = {步:{atk:0,hp:0},弓:{atk:0,hp:0},騎:{atk:0,hp:0},全軍:{atk:0,hp:0}}; const listRows = []; for(const it of ITEMS){ if(STATE.search && !it.name.includes(STATE.search)) continue; if(STATE.onlyChecked && !it.checked) continue; const curLv = Math.max(5, Math.min(12, Number(it.lv)||5)); let allRows = [], gold = 0; if (curLv <= 11) { for (let lv = curLv; lv <= 11; lv++) { allRows = allRows.concat(collectStepRows(it, lv)); gold += GOLD_BOOKS_FROM[lv] || 0; } } const agg = aggregate(allRows, weights); const cost = gold*price, unit = agg.eq>0? cost/agg.eq : Infinity; listRows.push({it, agg, gold, cost, unit}); if(it.checked){ kAtk+=agg.atk; kHp+=agg.hp; kEq+=agg.eq; kGold+=gold; for(const tag of Object.keys(tagSum)){ for(const t of ['步','弓','騎']){ tagSum[tag][t].atk += agg.byTagTroop[tag][t].atk; tagSum[tag][t].hp  += agg.byTagTroop[tag][t].hp; } } for(const t of Object.keys(troopSum)){ troopSum[t].atk += agg.troops[t].atk; troopSum[t].hp  += agg.troops[t].hp; } } } return {listRows, kAtk,kHp,kEq,kGold, tagSum, troopSum}; }
 
-function renderAll(){ STATE.weights.atk = Number($('#wAtk').value)||1; STATE.weights.hp  = Number($('#wHp').value)||0.9; STATE.price = Number($('#price').value)||1.76; const totalCnt = ITEMS.length; const checkedCnt = ITEMS.reduce((n, it) => n + (it.checked ? 1 : 0), 0); const badge = $('#cntArtifacts'); if (badge) badge.textContent = `文物：已選 ${checkedCnt} / 全部 ${totalCnt}`; const {listRows, kAtk,kHp,kEq,kGold, tagSum, troopSum} = calcAll(); const body = $('#tblArtifacts'); body.innerHTML=''; listRows.sort((a,b)=>a.unit-b.unit); for(const r of listRows){ const tr = document.createElement('tr'); const td0 = document.createElement('td'); td0.innerHTML = `<input type="checkbox" ${r.it.checked?'checked':''} />`; td0.querySelector('input').addEventListener('change',e=>{ r.it.checked=e.target.checked; renderAll(); }); tr.appendChild(td0); const nameTd = document.createElement('td'); nameTd.className = 'cell-name'; nameTd.textContent = r.it.name; if (Number(r.it.lv) === 12) { const chip = document.createElement('span'); chip.className = 'pill pill-muted'; chip.style.marginLeft = '8px'; chip.textContent = '已滿級'; nameTd.appendChild(chip); tr.classList.add('maxed-row'); } tr.appendChild(nameTd); const rc = r.it.rarity==='金'?'rar-gold':(r.it.rarity==='紫'?'rar-purple':''); const tdR=document.createElement('td'); tdR.innerHTML=`<span class="tag ${rc}">${r.it.rarity||''}</span>`; tr.appendChild(tdR); const tags = Array.from(new Set(r.it.rows.map(x=>x.base))).join(' / '); const tdT=document.createElement('td'); tdT.innerHTML=`<div class="flex">${tags.split('/').map(t=>`<span class="tag">${t.trim()}</span>`).join(' ')}</div>`; tr.appendChild(tdT); const tdLv=document.createElement('td'); const sel=document.createElement('select'); for(let i=5;i<=12;i++){ const o=document.createElement('option'); o.value=i; o.textContent='Lv.'+i; sel.appendChild(o); } sel.value=r.it.lv; sel.addEventListener('change',e=>{ r.it.lv=Number(e.target.value); renderAll(); }); tdLv.appendChild(sel); tr.appendChild(tdLv); tr.appendChild(tdRight(nf(r.agg.atk))); tr.appendChild(tdRight(nf(r.agg.hp))); tr.appendChild(tdRight(nf(r.agg.eq))); const tdB=tdRight(nf(r.gold,2)); tdB.title = `${nf(r.gold*PURPLE_PER_GOLD,0)} 紫書`; tr.appendChild(tdB); tr.appendChild(tdRight(nf(r.cost))); tr.appendChild(tdRight(r.agg.eq>0?nf(r.cost/r.agg.eq):'—')); body.appendChild(tr); }
-  $('#kAtk').textContent=nf(kAtk); $('#kHp').textContent=nf(kHp); $('#kEq').textContent=nf(kEq); $('#kCost').textContent=`${nf(kGold,2)} / ${nf(kGold*STATE.price)}`; $('#kConv').textContent=`≈ ${nf(kGold*PURPLE_PER_GOLD,0)} 紫書、${nf(kGold*BLUE_PER_GOLD,0)} 藍書、${nf(kGold*GREEN_PER_GOLD,0)} 綠書`; renderSteps(); renderTotals(tagSum, troopSum); }
+function renderAll(){ STATE.weights.atk = Number($('#wAtk').value)||1; STATE.weights.hp  = Number($('#wHp').value)||0.9; STATE.price = Number($('#price').value)||1.76; const totalCnt = ITEMS.length; const checkedCnt = ITEMS.reduce((n, it) => n + (it.checked ? 1 : 0), 0); const badge = $('#cntArtifacts'); if (badge) badge.textContent = `文物：已選 ${checkedCnt} / 全部 ${totalCnt}`; const {listRows, kAtk,kHp,kEq,kGold, tagSum, troopSum} = calcAll(); const body = $('#tblArtifacts'); body.innerHTML=''; listRows.sort((a,b)=>a.unit-b.unit); for(const r of listRows){ const tr = document.createElement('tr'); const td0 = document.createElement('td'); td0.innerHTML = `<input type="checkbox" ${r.it.checked?'checked':''} />`; td0.querySelector('input').addEventListener('change',e=>{ r.it.checked=e.target.checked; renderAll(); }); tr.appendChild(td0); const nameTd = document.createElement('td'); nameTd.className = 'cell-name'; nameTd.textContent = r.it.name; if (Number(r.it.lv) === 12) { const chip = document.createElement('span'); chip.className = 'pill pill-muted'; chip.style.marginLeft = '8px'; chip.textContent = '已滿級'; nameTd.appendChild(chip); tr.classList.add('maxed-row'); } tr.appendChild(nameTd); const rc = r.it.rarity==='金'?'rar-gold':(r.it.rarity==='紫'?'rar-purple':''); const tdR=document.createElement('td'); tdR.innerHTML=`<span class="tag ${rc}">${r.it.rarity||''}</span>`; tr.appendChild(tdR); const tags = Array.from(new Set(r.it.rows.map(x=>x.base))).join(' / '); const tdT=document.createElement('td'); tdT.innerHTML=`<div class="flex">${tags.split('/').map(t=>`<span class="tag">${t.trim()}</span>`).join(' ')}</div>`; tr.appendChild(tdT); const tdLv=document.createElement('td'); const sel=document.createElement('select'); for(let i=5;i<=12;i++){ const o=document.createElement('option'); o.value=i; o.textContent='Lv.'+i; sel.appendChild(o); } sel.value=r.it.lv; sel.addEventListener('change',e=>{ r.it.lv=Number(e.target.value); renderAll(); }); tdLv.appendChild(sel); tr.appendChild(tdLv); tr.appendChild(tdRight(nf(r.agg.atk))); tr.appendChild(tdRight(nf(r.agg.hp))); tr.appendChild(tdRight(nf(r.agg.eq))); const tdB=tdRight(nf(r.gold,2)); tdB.title = `${nf(r.gold*PURPLE_PER_GOLD,0)} 紫書`; tr.appendChild(tdB); tr.appendChild(tdRight(nf(r.cost))); tr.appendChild(tdRight(r.agg.eq>0?nf(r.cost/r.agg.eq):'—')); body.appendChild(tr); } $('#kAtk').textContent=nf(kAtk); $('#kHp').textContent=nf(kHp); $('#kEq').textContent=nf(kEq); $('#kCost').textContent=`${nf(kGold,2)} / ${nf(kGold*STATE.price)}`; $('#kConv').textContent=`≈ ${nf(kGold*PURPLE_PER_GOLD,0)} 紫書、${nf(kGold*BLUE_PER_GOLD,0)} 藍書、${nf(kGold*GREEN_PER_GOLD,0)} 綠書`; renderSteps(); renderTotals(tagSum, troopSum); }
 
 function tdRight(txt){ const td=document.createElement('td'); td.className='right'; td.textContent=txt; return td; }
 
-function renderSteps(){ const tb = $('#tblSteps'); tb.innerHTML=''; const price = STATE.price, w = STATE.weights; const rows = []; for(const it of ITEMS){ if(!it.checked) continue; const curLv = Math.max(5, Math.min(12, Number(it.lv)||5)); if (curLv <= 11) { for(let lv=curLv; lv<=11; lv++){ const rws = collectStepRows(it, lv); const agg = aggregate(rws, w); const gold = GOLD_BOOKS_FROM[lv]||0; const cost = gold*price; const unit = agg.eq>0? cost/agg.eq : Infinity; const tags = Array.from(new Set(it.rows.map(x=>x.base))).join(' / '); rows.push({it, lv, agg, gold, cost, unit, tags}); } } }
-  rows.sort((a,b)=>a.unit-b.unit); for(const r of rows){ const tr = document.createElement('tr'); tr.innerHTML = ` <td class="cell-name"><div class="flex"><b>Lv.${r.lv}→${r.lv+1}</b> ${r.it.name} <span class="tag">${r.tags}</span></div></td> <td class="right">${nf(r.agg.troops.步.atk)}</td> <td class="right">${nf(r.agg.troops.弓.atk)}</td> <td class="right">${nf(r.agg.troops.騎.atk)}</td> <td class="right">${nf(r.agg.atk)}</td> <td class="right">${nf(r.agg.hp)}</td> <td class="right">${nf(r.agg.eq)}</td> <td class="right" title="${nf(r.gold*PURPLE_PER_GOLD,0)} 紫書">${nf(r.gold,2)}</td> <td class="right">${nf(r.cost)}</td> <td class="right">${r.agg.eq>0?nf(r.cost/r.agg.eq):'—'}</td>`; tb.appendChild(tr);} }
+function renderSteps(){ const tb = $('#tblSteps'); tb.innerHTML=''; const price = STATE.price, w = STATE.weights; const rows = []; for(const it of ITEMS){ if(!it.checked) continue; const curLv = Math.max(5, Math.min(12, Number(it.lv)||5)); if (curLv <= 11) { for(let lv=curLv; lv<=11; lv++){ const rws = collectStepRows(it, lv); const agg = aggregate(rws, w); const gold = GOLD_BOOKS_FROM[lv]||0; const cost = gold*price; const unit = agg.eq>0? cost/agg.eq : Infinity; const tags = Array.from(new Set(it.rows.map(x=>x.base))).join(' / '); rows.push({it, lv, agg, gold, cost, unit, tags}); } } } rows.sort((a,b)=>a.unit-b.unit); for(const r of rows){ const tr = document.createElement('tr'); tr.innerHTML = ` <td class="cell-name"><div class="flex"><b>Lv.${r.lv}→${r.lv+1}</b> ${r.it.name} <span class="tag">${r.tags}</span></div></td> <td class="right">${nf(r.agg.troops.步.atk)}</td> <td class="right">${nf(r.agg.troops.弓.atk)}</td> <td class="right">${nf(r.agg.troops.騎.atk)}</td> <td class="right">${nf(r.agg.atk)}</td> <td class="right">${nf(r.agg.hp)}</td> <td class="right">${nf(r.agg.eq)}</td> <td class="right" title="${nf(r.gold*PURPLE_PER_GOLD,0)} 紫書">${nf(r.gold,2)}</td> <td class="right">${nf(r.cost)}</td> <td class="right">${r.agg.eq>0?nf(r.cost/r.agg.eq):'—'}</td>`; tb.appendChild(tr);} }
 
 function renderTotals(tag, troop){ const tg = $('#tagTotals'); tg.innerHTML=''; const renderTag = (name,obj)=>{ const wrap = document.createElement('div'); wrap.className='table-wrap'; const tbl = document.createElement('table'); tbl.innerHTML = ` <thead><tr><th colspan="4" class="muted">${name}</th></tr> <tr><th>兵種</th><th class="right">攻擊</th><th class="right">生命</th><th class="right">等價屬性</th></tr></thead> <tbody> ${['步','弓','騎'].map(t=>{ const atk=obj[t].atk, hp=obj[t].hp, eq=atk*STATE.weights.atk + hp*STATE.weights.hp; return `<tr><td>${t}</td><td class="right">${nf(atk)}</td><td class="right">${nf(hp)}</td><td class="right">${nf(eq)}</td></tr>`; }).join('')} </tbody>`; wrap.appendChild(tbl); tg.appendChild(wrap); }; renderTag('狂熱', tag['狂熱']); renderTag('基礎白字', tag['基礎白字']); renderTag('領主隨隊', tag['領主隨隊']); const tt = $('#troopTotals'); tt.innerHTML=''; for(const t of ['步','弓','騎','全軍']){ const atk=troop[t].atk, hp=troop[t].hp, eq=atk*STATE.weights.atk + hp*STATE.weights.hp; const tr=document.createElement('tr'); tr.innerHTML=`<td>${t}</td><td class="right">${nf(atk)}</td><td class="right">${nf(hp)}</td><td class="right">${nf(eq)}</td>`; tt.appendChild(tr); } }
 
@@ -212,11 +203,7 @@ $('#onlyChecked').addEventListener('change',e=>{STATE.onlyChecked=e.target.check
 $('#search').addEventListener('input',e=>{STATE.search=e.target.value.trim();renderAll();});
 
 // ====== Excel 匯出：把「逐步性價比」依目前勾選狀態輸出成 .xlsx ======
-function autoColWidths(data, headers){
-  const cols = headers.map(h=>({wch: Math.max( (h||'').toString().length, 6 ) }));
-  for(const row of data){ headers.forEach((h,i)=>{ const v = row[h]; const len = (v===null||v===undefined)?0:String(v).length; if(len > cols[i].wch) cols[i].wch = len; }); }
-  return cols;
-}
+function autoColWidths(data, headers){ const cols = headers.map(h=>({wch: Math.max( (h||'').toString().length, 6 ) })); for(const row of data){ headers.forEach((h,i)=>{ const v = row[h]; const len = (v===null||v===undefined)?0:String(v).length; if(len > cols[i].wch) cols[i].wch = len; }); } return cols; }
 
 function exportStepsToExcel(){
   const w = STATE.weights, price = STATE.price;
@@ -232,25 +219,62 @@ function exportStepsToExcel(){
       const gold = GOLD_BOOKS_FROM[lv]||0;
       const cost = gold*price;
       const unit = agg.eq>0? cost/agg.eq : '';
-      out.push({
+
+      const row = {
         Artifact: it.name,
         FromLv: lv,
         ToLv: lv+1,
         Tags: tags,
+        // 攻擊（依兵種）
         InfAtk: +agg.troops['步'].atk.toFixed(4),
         BowAtk: +agg.troops['弓'].atk.toFixed(4),
         CavAtk: +agg.troops['騎'].atk.toFixed(4),
         Atk: +agg.atk.toFixed(4),
+        // 生命（依兵種）
+        InfHP: +agg.troops['步'].hp.toFixed(4),
+        BowHP: +agg.troops['弓'].hp.toFixed(4),
+        CavHP: +agg.troops['騎'].hp.toFixed(4),
         HP: +agg.hp.toFixed(4),
+        // 等價屬性與成本
         EqAttr: +agg.eq.toFixed(4),
         GoldBooks: +gold.toFixed(4),
         Cost_CNY: +cost.toFixed(4),
         CNY_per_Eq: unit===''? '': +unit.toFixed(4)
-      });
+      };
+
+      // 依「標籤 × 兵種」細分：攻擊 + 生命（共 18 欄）
+      const bases = ['狂熱','基礎白字','領主隨隊'];
+      const troops = ['步','弓','騎'];
+      for(const b of bases){
+        for(const t of troops){
+          const atkVal = (agg.byTagTroop[b] && agg.byTagTroop[b][t]) ? agg.byTagTroop[b][t].atk : 0;
+          const hpVal  = (agg.byTagTroop[b] && agg.byTagTroop[b][t]) ? agg.byTagTroop[b][t].hp  : 0;
+          row[`${b}_${t}_Atk`] = +atkVal.toFixed(4);
+          row[`${b}_${t}_HP`]  = +hpVal.toFixed(4);
+        }
+      }
+
+      out.push(row);
     }
   }
+
   if(out.length===0){ alert('目前沒有可匯出的步驟（請勾選文物，且等級不可為 Lv.12）'); return; }
-  const headers = ['Artifact','FromLv','ToLv','Tags','InfAtk','BowAtk','CavAtk','Atk','HP','EqAttr','GoldBooks','Cost_CNY','CNY_per_Eq'];
+
+  const headers = [
+    'Artifact','FromLv','ToLv','Tags',
+    'InfAtk','BowAtk','CavAtk','Atk',
+    'InfHP','BowHP','CavHP','HP',
+    'EqAttr','GoldBooks','Cost_CNY','CNY_per_Eq',
+    // 標籤×兵種：攻擊（9 欄）
+    '狂熱_步_Atk','狂熱_弓_Atk','狂熱_騎_Atk',
+    '基礎白字_步_Atk','基礎白字_弓_Atk','基礎白字_騎_Atk',
+    '領主隨隊_步_Atk','領主隨隊_弓_Atk','領主隨隊_騎_Atk',
+    // 標籤×兵種：生命（9 欄）
+    '狂熱_步_HP','狂熱_弓_HP','狂熱_騎_HP',
+    '基礎白字_步_HP','基礎白字_弓_HP','基礎白字_騎_HP',
+    '領主隨隊_步_HP','領主隨隊_弓_HP','領主隨隊_騎_HP'
+  ];
+
   const ws = XLSX.utils.json_to_sheet(out, {header: headers});
   ws['!cols'] = autoColWidths(out, headers);
 
